feat: Add TabPFNClassifier integration
- Implemented `TabPFNClassifierClass` wrapper with scikit-learn compatibility.
- Registered `TabPFNClassifierClass` in pipeline and updated YAML configs.
- Added unit tests for TabPFN integration.
- Fixed logging issue in `project_score_save.py` by filtering large parameter objects.
- Updated `.gitignore` to exclude TabPFN model checkpoints.

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ notebooks/percent_missing_synthetic_data_generated.pkl
 percent_missing_synthetic_data_generated.pkl
 synthetic_data_generated.csv
 synthetic_data_generated.csv
+notebooks/tabpfn-v2.5-classifier-v2.5_default-2.ckpt
