--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -12,9 +12,6 @@ jobs:
       NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
       SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
       REQUESTS_CA_BUNDLE: /etc/ssl/certs/ca-certificates.crt
-      # Always use CPU-only PyTorch to ensure consistency and save resources
-      PIP_EXTRA_INDEX_URL: https://download.pytorch.org/whl/cpu
-      TORCH_CPU_ONLY: "true"
 
     steps:
       - name: Check out repository
@@ -23,7 +20,14 @@ jobs:
       - name: Set environment variables
         run: |
           echo "DEBIAN_FRONTEND=noninteractive" >> $GITHUB_ENV
-
+          
+          # Detect if running on GitHub Actions (not Gitea or act)
+          if [[ "${{ github.server_url }}" == "https://github.com" ]] && [[ -z "${{ env.ACT }}" ]]; then
+            echo "Running on GitHub - using CPU-only PyTorch"
+            echo "PIP_EXTRA_INDEX_URL=https://download.pytorch.org/whl/cpu" >> $GITHUB_ENV
+            echo "TORCH_CPU_ONLY=true" >> $GITHUB_ENV
+          fi
+          
           if [[ "${{ vars.IS_GITEA }}" == "true" ]]; then
             echo "Setting thread limits for Gitea runner"
             echo "OMP_NUM_THREADS=1" >> $GITHUB_ENV
@@ -91,8 +95,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3.12 python3.12-venv python3.12-dev
 
-          # Install pip for Python 3.12
-          curl -sS https://bootstrap.pypa.io/get-pip.py | sudo python3.12 - --break-system-packages
+          # Install pip for Python 3.12 (force reinstall to avoid Debian package conflicts)
+          curl -sS https://bootstrap.pypa.io/get-pip.py | sudo python3.12 - --break-system-packages --force-reinstall
 
           sudo ln -sf /usr/bin/python3.12 /usr/local/bin/python
           sudo ln -sf /usr/bin/python3.12 /usr/local/bin/python3
