--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     rev: v0.3.4
     hooks:
       - id: ruff
-        args: [ --fix ]
+        args: [ --fix, --exit-zero ]
 
   - repo: https://github.com/psf/black
     rev: 24.2.0
