ci: replace IS_GITEA var with server_url detection
Updates the docs deployment and notebook test workflows to automatically
detect the running environment using `github.server_url`. This removes
the dependency on the manual `IS_GITEA` variable, ensuring that Gitea
deployment jobs run correctly on self-hosted instances and are skipped
on GitHub.com.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -86,7 +86,7 @@ jobs:
   # Deploy job for GitHub Pages
   deploy-github:
     needs: build
-    if: ${{ vars.IS_GITEA != 'true' }}
+    if: ${{ github.server_url == 'https://github.com' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -114,7 +114,7 @@ jobs:
   # Deploy job for Gitea
   deploy-gitea:
     needs: build
-    if: ${{ vars.IS_GITEA == 'true' }}
+    if: ${{ github.server_url != 'https://github.com' }}
     runs-on: ubuntu-latest
     env:
       NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
