--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -91,6 +91,13 @@ jobs:
           name: docs-artifact
           path: ./docs/build
 
+      - name: Upload artifact for GitHub
+        if: ${{ github.server_url == 'https://github.com' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-artifact
+          path: ./docs/build
+
   # Deploy job for GitHub Pages
   deploy-github:
     needs: build
