--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,48 +22,58 @@ classifiers = [
 # Core runtime dependencies for the project
 dependencies = [
     # Core data and ML libraries
-    "pandas", #==2.0.3
+    "pandas>=2.2.0,<2.4.0",
     "polars", #==1.9.0
-    "numpy==1.26.4",
-    "scikit-learn==1.5.2",
-    "imbalanced-learn==0.12.4",
+    "numpy>=1.26.4,<2.0.0",
+    "scikit-learn>=1.5.2,<1.6",
+    "imbalanced-learn>=0.12.4",
 
-    # ML frameworks
-    "tensorflow==2.17.0",
-    "torch>=2.0.0",  # Updated: removed strict version pin
+    # ML frameworks and dependencies
+    "keras>=3.0.0",
+    "tensorflow>=2.16.0", # Relaxed to allow resolution
+    "torch>=2.2.0",      # Relaxed to allow resolution
     "torchvision>=0.15.0",  # Updated: compatible with torch 2.x
-    "tab_transformer_pytorch==0.3.0",
-    "lightgbm==4.5.0",
-    "xgboost==2.1.1",
-    "catboost==1.2.7",
-    "h2o==3.46.0.5",
-    "scikeras==0.13.0",
+    "tab_transformer_pytorch>=0.3.0",
+    "lightgbm>=4.5.0",
+    "xgboost>=2.1.1",
+    "catboost>=1.2.7",
+    "h2o>=3.46.0.5",
+    "scikeras>=0.13.0",
+    "autogluon.tabular",
+    "tpot==0.12.2",
+    "FLAML",
+    "autokeras",
+    "spacy>=3.8.0", # Force modern spacy for pydantic v2 compatibility
+    "fastai",
+    "ray>=2.43.0,<2.53.0",
 
     # Hyperparameter optimization and feature tools
     "hyperopt",#==0.2.7",
-    "scikit-optimize==0.10.2",
-    "shap==0.46.0",
-    "pyimpetus==4.1.2",
-    "fitter==1.7.1",
-    "fuzzysearch==0.7.3",
+    "scikit-optimize>=0.10.2",
+    "shap>=0.46.0",
+    "pyimpetus>=4.1.2",
+    "fitter>=1.7.1",
+    "fuzzysearch>=0.7.3",
     # "simbsig",  # Commented out: conflicts with torch 2.x requirement
+    "tabpfn",
 
     # Visualization and notebook integration
-    "matplotlib==3.9.2",
-    "seaborn==0.13.2",
-    "upsetplot==0.9.0",
-    "ipykernel==6.29.5",
-    "ipywidgets==8.1.5",
-    "tabulate==0.9.0",
-    "pydotplus==2.0.2",
-    "graphviz==0.20.3",
+    "matplotlib>=3.9.0",
+    "seaborn>=0.13.2",
+    "upsetplot>=0.9.0",
+    "ipykernel>=6.29.5",
+    "ipython>=8.0.0",
+    "ipywidgets>=8.1.5",
+    "tabulate>=0.9.0",
+    "pydotplus>=2.0.2",
+    "graphviz>=0.20.3",
 
     # Other utilities
-    "statsmodels==0.14.4",
-    "pyarrow==18.1.0",
-    "pyyaml==6.0.2",
-    "lxml==5.3.0",
-    "setuptools<70.0.0", # Added for pkg_resources, required by hyperopt in Py3.12+
+    "statsmodels>=0.14.4",
+    "pyarrow>=18.1.0",
+    "pyyaml>=6.0.2",
+    "lxml>=5.3.0",
+    "pydantic>=2.5.0", # Force modern pydantic
 
     # Dev
     "black",
@@ -77,19 +87,19 @@ dependencies = [
 
 [project.optional-dependencies]
 test = [
-    "pytest",
+    "pytest>=7.0.0",
     "nbmake==1.4.6",
 ]
 ts = [
     # Time-series specific libraries
-    "aeon[dl]==0.11.1",
+    "aeon[all_extras]>=1.2.0", # Updated for compatibility with pandas>=2.2
     # Removed tensorflow-addons: deprecated and incompatible with Python 3.12
     "tsfresh",
     "tensorflow_probability",
     "keras-self-attention==0.51.0",
     "prophet==1.1.3",
     "pmdarima==2.0.3",
-    "gluonts==0.13.2",
+    "gluonts>=0.14.0",
 ]
 docs = [
     "sphinx",
